--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,5 +5,5 @@ Message: {{ hello$ | async }}
   <button (click)="update()">Update</button>
 </p>
 <ng-template #noUpdate>
-  <p>No update available.</p>
+  <p>No update available for now.</p>
 </ng-template>
